# context-service

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run_server.py  test_api.py
.github/workflows/: ci.yml
api/: __init__.py  models.py  task_routes.py
db/: M2_COMPLETION_REPORT.md  README.md  alembic.ini  migrate.py  schema.sql  test_database.py
db/migrations/: __init__.py  env.py  script.py.mako
db/migrations/versions/: 001_initial_schema.py  __init__.py
doc/: agent_registry.md  architecture_diagram.md  complete_api_design.md  context_organization.md  context_service_dev_plan.md  data_structures_design.md  database_schema.md  dsl_slicing_implementation_summary.md  knowledge_integration.md  message_formats.md  module_overview.md  task_slicing_design.md  task_store_api_design.md  tool_agent_relationship.md
mock/: __init__.py
observability/: __init__.py
repository/: __init__.py  database.py  models.py
service/: __init__.py  dsl_parser.py  slice_generator.py  task_service.py
