[project]
name = "context-service"
version = "0.1.0"
description = "Context Service 核心框架"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
  { name = "Your Name", email = "you@example.com" }
]
dependencies = [
  "fastapi~=0.111",
  "uvicorn[standard]~=0.29",
  "pydantic~=2.7",
  "sqlalchemy[asyncio]~=2.0",
  "asyncpg~=0.29",
  "alembic~=1.13",
  "httpx~=0.27",
  "loguru~=0.7",
  "opentelemetry-sdk~=1.23",
  "python-dotenv~=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest~=8.0",
  "pytest-asyncio~=0.23",
  "black~=24.4",
  "isort~=5.13",
  "mypy~=1.10",
  "pre-commit~=3.6",
]

[build-system]
requires = ["uv", "setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple" 